the data is fetched

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     /* padding-bottom: 150px; */
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .section-a{
