--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,30 @@
 .details{
     /* padding-bottom: 150px; */
     display: flex;
-    justify-content: space-between;
+    justify-items: space-between;
     align-items: center;
 }
 
 .section-a{
     margin-right: 10px;
+}
+
+.title{
+    white-space: nowrap;
+}
+
+.img{
+    width: 100px;
+    height: 50px;
+    margin: 5px;
+}
+
+.list{
+    padding: 5px;
+}
+
+.list-child{
+    color: #8FC4DD;
 }
 
 
@@ -22,5 +40,21 @@
     
     .section-b{
            margin-left: 70px;
+    }
+    .title{
+        font-size: 25px;
+    }
+    .sub-title{
+        font-size: 20px;
+    }
+    .list{
+        font-size: 15px;
+    }
+    .list-child{
+        font-size: 16px;
+    }
+    .img{
+        width: 200px;
+        height: 100px;
     }
 }
